Footer separation in dark mode fixed

--- a/styles.css
+++ b/styles.css
@@ -367,7 +367,7 @@ footer {
   font-family: cursive;
 }
 .footer_dark {
-  background-color: #fff;
+  background-color: black;
 }
 .social-icons a {
   text-decoration: none;
